--- a/exercíciosJSManzano/ExerciciosPara/exercicioc/index.html
+++ b/exercíciosJSManzano/ExerciciosPara/exercicioc/index.html
@@ -13,3 +13,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+<!-- Apresentar o total da soma obtida dos cem primeiros números inteiros (1+2+3+4+...+98+99+100).  -->
