--- a/exercíciosJSManzano/ExerciciosPara/exercicioh/index.html
+++ b/exercíciosJSManzano/ExerciciosPara/exercicioh/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicio A Manzano</title>
+    <title>Exercício H Manzano</title>
 </head>
+
 <body>
-    <button type="button" onclick="">Click Here!</button>
-    <script src="js/script.js"></script>   
+    <button type="button" onclick="exercicioH()">Click Here!</button>
+    <script src="js/script.js"></script>
 </body>
-</html>
