--- a/exercíciosJSManzano/ExerciciosPara/exerciciok/index.html
+++ b/exercíciosJSManzano/ExerciciosPara/exerciciok/index.html
@@ -13,3 +13,5 @@
   <script src="js/script.js"></script>  
 </body>
 </html>
+<!-- Elaborar um programa que apresente como resultado o valor do fatorial dos valores ímpares 
+situados na faixa numérica de 1 a 10. -->
