--- a/exercíciosJSManzano/ExerciciosRepitaAte/exercicioa/index.html
+++ b/exercíciosJSManzano/ExerciciosRepitaAte/exercicioa/index.html
@@ -7,7 +7,8 @@
     <title>Exercicio A Manzano</title>
 </head>
 <body>
-    <button type="button" onclick="">Click Here!</button>
+    <button type="button" onclick="exercicioA()">Click Here!</button>
     <script src="js/script.js"></script>   
 </body>
 </html>
+<!-- Apresentar os quadrados dos números inteiros de 15 a 200. -->
