--- a/exercíciosJSManzano/ExerciciosPara/exerciciob/index.html
+++ b/exercíciosJSManzano/ExerciciosPara/exerciciob/index.html
@@ -13,3 +13,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+<!-- Apresentar os resultados de uma tabuada de multiplicar (de 1 até 10) de um número qualquer.  -->
