--- a/exercíciosJSManzano/ExerciciosPara/exercicioh/index.html
+++ b/exercíciosJSManzano/ExerciciosPara/exercicioh/index.html
@@ -12,3 +12,7 @@
     <button type="button" onclick="exercicioH()">Click Here!</button>
     <script src="js/script.js"></script>
 </body>
+
+<!-- Elaborar um programa que apresente como resultado o valor de uma potência de uma base 
+qualquer elevada a um expoente qualquer, ou seja, de BE, em que B é o valor da base e E o valor 
+do expoente. Observe que neste exercício não pode ser utilizado o operador de exponenciação -->
