--- a/exercíciosJSManzano/ExerciciosRepitaAte/exerciciog/index.html
+++ b/exercíciosJSManzano/ExerciciosRepitaAte/exerciciog/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício E Manzano</title>
+    <title>Exercício G Manzano</title>
 </head>
 <body>
- <button type="button" onclick="exercicioE()">Click Here!</button>   
+ <button type="button" onclick="exercicioG()">Click Here!</button>   
  <script src="js/script.js"></script>
 </body>
 </html>
-<!-- Elaborar um programa que efetue a leitura de 15 valores numéricos inteiros e no final apresente o 
-total do somatório da fatorial de cada valor lido.  -->
+<!-- Elaborar um programa que apresente como resultado o valor do fatorial dos valores ímpares 
+situados na faixa numérica de 1 a 10.  -->
