--- a/exercíciosJSFaccat/exercicio5/index.html
+++ b/exercíciosJSFaccat/exercicio5/index.html
@@ -11,3 +11,4 @@
  <script src="js/script.js"></script>
 </body>
 </html>
+<!-- Escreva um algoritmo para ler um valor (do teclado) e escrever (na tela) o seu antecessor. -->
