--- a/exercíciosJSFaccat/exercicio15/index.html
+++ b/exercíciosJSFaccat/exercicio15/index.html
@@ -12,3 +12,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+<!-- Ler um valor e escrever se é positivo ou negativo (considere o valor zero como positivo).  -->
